[gd_scene load_steps=12 format=2]

[ext_resource path="res://UI/Courneuf-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ControlButton.gd" type="Script" id=2]
[ext_resource path="res://UI/Menus/Boton.png" type="Texture" id=3]
[ext_resource path="res://Sonidos/Menu/ControlChanged.wav" type="AudioStream" id=4]
[ext_resource path="res://UI/Menus/RatonBoton.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0745098, 0.0705882, 0.0705882, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0745098, 0.0705882, 0.0705882, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0745098, 0.0705882, 0.0705882, 1 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
resource_local_to_scene = true
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=6]
resource_name = "ParpadeoControlButton"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ), Vector2( 1, 1 ) ]
}

[node name="ControlButton" type="TextureButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 12.0
margin_bottom = 12.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -15.0
margin_top = -13.0
margin_right = 135.0
margin_bottom = 39.0
rect_scale = Vector2( 0.2, 0.5 )
custom_styles/read_only = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/cursor_color = Color( 0.0745098, 0.0705882, 0.0705882, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = -2.0
margin_right = 35.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 5 )
centered = false
hframes = 3

[node name="Button" type="Button" parent="."]
modulate = Color( 0.0823529, 0.862745, 0.313726, 0 )
margin_right = 32.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ParpadeoControlButton = SubResource( 6 )

[node name="AudioControl" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Sonido"
[connection signal="gui_input" from="Key" to="." method="_on_Key_gui_input"]
[connection signal="focus_entered" from="Button" to="." method="_on_Button_focus_entered"]
[connection signal="focus_exited" from="Button" to="." method="_on_Button_focus_exited"]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
